[tool.poetry]
name = "kirico_bot"
version = "0.1.0"
description = "雾子酱~ 基于 NoneBot2 的多平台聊天机器人。"
authors = [
    "Nranphy <3102002900@qq.com>"
    ]
repository = "https://github.com/Nranphy/kirico_bot"
readme = "README.md"
license = "AGPL-3.0-only"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.dependencies]
python = "^3.9"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-htmlrender = "^0.2.1"
nonebot2 = {extras = ["httpx"], version = "^2.0.1"}
nonebot-adapter-onebot = "^2.2.3"
nonebot-adapter-console = "^0.4.0"
nonebot-adapter-villa = "^1.1.0"
pillow = "^10.1.0"

[tool.nonebot]
plugins = [
    ]
plugin_dirs = [
    "plugins/default_plugins", 
    "plugins/kirico_standard_plugins", 
    "plugins/other_plugins", 
    ]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"